--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.11", features = ["blocking"] }
 scraper = "0.13.0"
+chrono = "0.4"
+chrono-tz = "0.6.1"
