--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ reqwest = { version = "0.11", features = ["blocking"] }
 scraper = "0.13.0"
 chrono = "0.4"
 chrono-tz = "0.6.1"
+html-escape = "0.2.11"
