--- a/.github/workflows/convert_into_rss.yml
+++ b/.github/workflows/convert_into_rss.yml
@@ -29,7 +29,7 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - run: mkdir -p pages/feed
-      - run: cd repo && cargo run > ../pages/feed/atom10.xml
+      - run: cd repo && cargo run "https://yumetodo.github.io/unofficial-windows-message-center-rss/feed/atom10.xml" > ../pages/feed/atom10.xml
       - name: deploy
         run: |
           cd pages
