--- a/.github/workflows/convert_into_rss.yml
+++ b/.github/workflows/convert_into_rss.yml
@@ -9,27 +9,14 @@ jobs:
   scrap:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: dsaltares/fetch-gh-release-asset@master
         with:
-          path: repo
+          file: unofficial-windows-message-center-rss
       - uses: actions/checkout@v3
         with:
           ref: gh-pages
           path: pages
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - run: mkdir -p pages/feed
-      - run: cargo test
-        working-directory: repo
-      - run: cargo run "https://yumetodo.github.io/unofficial-windows-message-center-rss/feed/atom10.xml" > ../pages/feed/atom10.xml
-        working-directory: repo
+      - run: ./unofficial-windows-message-center-rss "https://yumetodo.github.io/unofficial-windows-message-center-rss/feed/atom10.xml" > ./pages/feed/atom10.xml
       - name: deploy
         run: |
           cd pages
