--- a/.github/workflows/convert_into_rss.yml
+++ b/.github/workflows/convert_into_rss.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: dsaltares/fetch-gh-release-asset@master
         with:
           file: unofficial-windows-message-center-rss
+      - run: chmod +x unofficial-windows-message-center-rss
       - uses: actions/checkout@v3
         with:
           ref: gh-pages
