--- a/.github/workflows/convert_into_rss.yml
+++ b/.github/workflows/convert_into_rss.yml
@@ -9,6 +9,7 @@ jobs:
   scrap:
     runs-on: ubuntu-22.04
     steps:
+      - run: sudo apt-get -y install libxml2-utils
       - uses: dsaltares/fetch-gh-release-asset@master
         with:
           file: unofficial-windows-message-center-rss
@@ -18,6 +19,7 @@ jobs:
           ref: gh-pages
           path: pages
       - run: ./unofficial-windows-message-center-rss "https://yumetodo.github.io/unofficial-windows-message-center-rss/feed/atom10.xml" > ./pages/feed/atom10.xml
+      - run: xmllint ./pages/feed/atom10.xml --noout
       - name: deploy
         run: |
           cd pages
