--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,12 @@ jobs:
       - run: sudo apt-get -y install libxml2-utils
         continue-on-error: true
       - run: |
-          curl -LO http://www.ftp.ne.jp/Linux/packages/ubuntu/archive/pool/main/libx/libxml2/libxml2-utils_2.9.13+dfsg-1ubuntu0.4_amd64.deb
-          if [ -f libxml2-utils_2.9.13+dfsg-1ubuntu0.4_amd64.deb ]; then
-            sudo dpkg -i libxml2-utils_2.9.13+dfsg-1ubuntu0.4_amd64.deb
+          if ! command -v xmllint; then
+            curl -LO http://www.ftp.ne.jp/Linux/packages/ubuntu/archive/pool/main/libx/libxml2/libxml2-utils_2.9.13+dfsg-1ubuntu0.4_amd64.deb
+            if [ -f libxml2-utils_2.9.13+dfsg-1ubuntu0.4_amd64.deb ]; then
+              sudo dpkg -i libxml2-utils_2.9.13+dfsg-1ubuntu0.4_amd64.deb
+              xmllint --version
+            fi
           fi
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
